Fixed MIDI File Type Bug

--- a/Exploration/Explore Tracks.ipynb
+++ b/Exploration/Explore Tracks.ipynb
@@ -25,6 +25,10 @@
     "pd.set_option('mode.chained_assignment', None)\n",
     "#pd.options.mode.chained_assignment = None\n",
     "\n",
+    "# min_pitch: \n",
+    "# max_pitch: \n",
+    "# Homework: Get results for 1k files \n",
+    "\n",
     "os.chdir(\"/Users/sorensabet/Desktop/Master's Coursework/CSC2506_Project\")\n",
     "\n",
     "# Read in hdf5 versions of data\n",
@@ -78,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "underlying-mouse",
    "metadata": {},
    "outputs": [
@@ -86,14 +90,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transposing!\n",
       "Merging!\n",
-      "Track: 1, Section: 0\n"
+      "Track: 1, Section: 0\n",
+      "Track: 1, Section: 1\n",
+      "Track: 1, Section: 2\n",
+      "Track: 1, Section: 3\n",
+      "Track: 1, Section: 4\n",
+      "Track: 1, Section: 5\n",
+      "Track: 1, Section: 6\n",
+      "Track: 1, Section: 7\n"
      ]
     }
    ],
    "source": [
-    "def split_tracks(tdf, mdf, n_meas=4, n_duplicates=1, n_transpose=0, merge_tracks=False, song_tpb=480):\n",
+    "def split_tracks(tdf, mdf, n_meas=4, n_copies=1, n_transpose=0, merge_tracks=False, song_tpb=480):\n",
     "    \"\"\"\n",
     "    tdf:           Track level dataframe, contains information about the track \n",
     "    mdf:           Message level dataframe, contains information about MIDI messages \n",
@@ -150,14 +160,13 @@
     "    mdf = mdf.loc[mdf['type'].isin(['note_on', 'note_off'])]\n",
     "    mdf['outfile'] = (mdf['bar']/n_meas).astype(int)\n",
     "    song_tpb = song_df['ticks_per_beat'].iloc[0]\n",
-    "    midi_type = 1 if n_duplicates > 1 else 0\n",
+    "    midi_type = 1 if n_copies >= 1 else 0\n",
     "\n",
     "    for t in tracks: \n",
     "        for f in mdf['outfile'].unique():\n",
     "            print('Track: %d, Section: %d' % (t,f))\n",
     "            # Get Specific messages for the track\n",
     "            tmdf = mdf.loc[(mdf['track_num'] == t) & (mdf['outfile'] == f)]\n",
-    "\n",
     "            # Create the track specific MIDI file \n",
     "            mid = MidiFile(ticks_per_beat=song_tpb, type=midi_type)\n",
     "            midiTrack = MidiTrack()\n",
@@ -179,13 +188,13 @@
     "            midiTrack.append(MetaMessage('end_of_track', time=0))\n",
     "\n",
     "            # If we want to duplicate the track \n",
-    "            for i in range(0, n_duplicates):\n",
+    "            for i in range(0, n_copies+1):\n",
     "                mid.tracks.append(midiTrack)\n",
     "            filename = 'Splitting MIDI Files/si' + str(1) + '_tr' + str(t) + '_section' + str(f) + '.mid' \n",
     "\n",
     "            mid.save(filename)\n",
     "\n",
-    "split_tracks(track_df, msg_df, n_meas=100, n_duplicates=3, n_transpose=1, merge_tracks=True, song_tpb=song_df['ticks_per_beat'].iloc[0])"
+    "split_tracks(track_df, msg_df, n_meas=4, n_copies=0, n_transpose=0, merge_tracks=False, song_tpb=song_df['ticks_per_beat'].iloc[0])"
    ]
   },
   {
