Updated Explore Tracks to Iterate Over Existing Messages

--- a/Exploration/Explore Tracks.ipynb
+++ b/Exploration/Explore Tracks.ipynb
@@ -9,9 +9,11 @@
    "source": [
     "import os\n",
     "import time\n",
+    "import shutil\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from mido import MidiFile\n",
     "from mido import MidiTrack\n",
@@ -32,78 +34,39 @@
     "os.chdir(\"/Users/sorensabet/Desktop/Master's Coursework/CSC2506_Project\")\n",
     "\n",
     "# Read in hdf5 versions of data\n",
-    "song_df = pd.read_hdf('Raw Data/song_df.h5', key='data')\n",
-    "track_df = pd.read_hdf('Raw Data/track_df.h5', key='data')\n",
-    "msg_df = pd.read_hdf('Raw Data/msgs_df.h5', key='data')\n",
-    "msg_df = msg_df.astype({'type': 'category'})\n",
-    "\n",
-    "track_df.drop(columns={'track_has_pitchwheel', 'track_smpte'}, inplace=True)\n",
-    "track_df = track_df.loc[track_df['track_msg_types'].astype(str).str.contains('note') == True]\n",
-    "track_df.drop_duplicates(subset=['song_idx', 'track_num'],inplace=True)\n",
-    "\n",
-    "# Number of measures to go into a single output\n",
-    "num_measures = 4"
+    "song_df = pd.read_json('Dataframes/song_df.json')\n",
+    "track_df = pd.read_json('Dataframes/track_df.json')\n",
+    "msg_df = pd.read_hdf('Dataframes/msg_df.h5', key='data')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "continued-evanescence",
+   "id": "damaged-strategy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start with just considering a single song \n",
-    "song_df = song_df.loc[song_df['song_idx'] == 1]\n",
-    "track_df = track_df.loc[track_df['song_idx'] == 1]\n",
-    "msg_df = msg_df.loc[(msg_df['song_idx'] == 1) & (msg_df['track_num'].isin(track_df['track_num']))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "loved-station",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I need to get cumulative time for each track separately. \n",
-    "num_tracks = 8\n",
-    "new_msg_dfs = []\n",
-    "for i in range(0, song_df['n_tracks'].iloc[0]):\n",
-    "    tmp_msgs = msg_df.loc[msg_df['track_num'] == i]\n",
-    "    tmp_msgs['ctime'] = tmp_msgs['time'].cumsum()\n",
-    "    tmp_msgs['cbeats'] = tmp_msgs['ctime']/song_df['ticks_per_beat'].iloc[0] \n",
-    "    new_msg_dfs.append(tmp_msgs)\n",
-    "msg_df = pd.concat(new_msg_dfs)\n",
+    "# song_df\n",
+    "song_df = song_df.loc[~song_df['ticks_per_beat'].isnull()]\n",
+    "song_df.index = song_df['song_idx']\n",
     "\n",
-    "# I'm going to 4/4 time, so, I just need to divide cbeats by the 4 to get measure number\n",
-    "# Then, I need to divide measure number by n which is the number of measures going into a track \n",
-    "msg_df['bar'] = (msg_df['cbeats']/4).astype(int)"
+    "# track_df\n",
+    "track_df.drop(columns={'song_name','track_has_pitchwheel', 'track_smpte'}, inplace=True)\n",
+    "track_df = track_df.loc[track_df['track_msg_types'].astype(str).str.contains('note') == True][['song_idx', 'track_num']] # Exclude tracks that don't contain notes\n",
+    "track_df.drop_duplicates(subset=['song_idx', 'track_num'],inplace=True)\n",
+    "\n",
+    "# msg_df\n",
+    "msg_df = msg_df.loc[msg_df['song_idx'].isin(song_df['song_idx'].unique())]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "underlying-mouse",
+   "execution_count": 5,
+   "id": "unavailable-mailman",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Merging!\n",
-      "Track: 1, Section: 0\n",
-      "Track: 1, Section: 1\n",
-      "Track: 1, Section: 2\n",
-      "Track: 1, Section: 3\n",
-      "Track: 1, Section: 4\n",
-      "Track: 1, Section: 5\n",
-      "Track: 1, Section: 6\n",
-      "Track: 1, Section: 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def split_tracks(tdf, mdf, n_meas=4, n_copies=1, n_transpose=0, merge_tracks=False, song_tpb=480):\n",
+    "def split_tracks(tdf, mdf, n_meas=4, n_copies=1, n_transpose=0, merge_tracks=False, song_tpb=480, song_idx= 0, folder=None):\n",
     "    \"\"\"\n",
     "    tdf:           Track level dataframe, contains information about the track \n",
     "    mdf:           Message level dataframe, contains information about MIDI messages \n",
@@ -115,7 +78,7 @@
     "    \"\"\"   \n",
     "    \n",
     "    tracks = list(tdf['track_num'].unique())\n",
-    "    \n",
+    "        \n",
     "    # Testing Transposing up and down from middle octave\n",
     "    if (n_transpose > 0):\n",
     "        print('Transposing!')\n",
@@ -159,17 +122,19 @@
     "    \n",
     "    mdf = mdf.loc[mdf['type'].isin(['note_on', 'note_off'])]\n",
     "    mdf['outfile'] = (mdf['bar']/n_meas).astype(int)\n",
-    "    song_tpb = song_df['ticks_per_beat'].iloc[0]\n",
     "    midi_type = 1 if n_copies >= 1 else 0\n",
-    "\n",
-    "    for t in tracks: \n",
+    "    \n",
+    "    \n",
+    "    for t in tracks:        \n",
     "        for f in mdf['outfile'].unique():\n",
-    "            print('Track: %d, Section: %d' % (t,f))\n",
+    "            #print('Track: %d, Section: %d' % (t,f))\n",
+    "            \n",
+    "            # Create the track specific MIDI file \n",
+    "            mid = MidiFile(ticks_per_beat=int(song_tpb), type=midi_type)\n",
+    "            midiTrack = MidiTrack()\n",
+    "            \n",
     "            # Get Specific messages for the track\n",
     "            tmdf = mdf.loc[(mdf['track_num'] == t) & (mdf['outfile'] == f)]\n",
-    "            # Create the track specific MIDI file \n",
-    "            mid = MidiFile(ticks_per_beat=song_tpb, type=midi_type)\n",
-    "            midiTrack = MidiTrack()\n",
     "\n",
     "            # Tempo MIDI Message\n",
     "            midiTrack.append(MetaMessage('set_tempo', time=0, tempo=500000))\n",
@@ -186,41 +151,74 @@
     "\n",
     "            # End of Track MIDI Message\n",
     "            midiTrack.append(MetaMessage('end_of_track', time=0))\n",
-    "\n",
+    "            \n",
     "            # If we want to duplicate the track \n",
     "            for i in range(0, n_copies+1):\n",
     "                mid.tracks.append(midiTrack)\n",
-    "            filename = 'Splitting MIDI Files/si' + str(1) + '_tr' + str(t) + '_section' + str(f) + '.mid' \n",
-    "\n",
-    "            mid.save(filename)\n",
-    "\n",
-    "split_tracks(track_df, msg_df, n_meas=4, n_copies=0, n_transpose=0, merge_tracks=False, song_tpb=song_df['ticks_per_beat'].iloc[0])"
+    "            filename =  folder + str(song_idx) + '_' + str(t) + '_' + str(f) + '.mid' \n",
+    "            \n",
+    "            mid.save(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "accurate-mentor",
+   "execution_count": 6,
+   "id": "innocent-antenna",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "994it [04:11,  3.95it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# # # Okay. What's the functionality to combine tracks together? \n",
-    "# msg_df.sort_values(by=['cbeats', 'track_num'], inplace=True)\n",
-    "# msg_df.reset_index(drop=True, inplace=True)\n",
-    "# msg_df['tmp_idx'] = msg_df.index\n",
+    "n_meas = 16\n",
+    "n_copies = 0\n",
+    "n_transpose = 0\n",
+    "merge_tracks = False \n",
     "\n",
-    "# msg_df_2 = msg_df[['cbeats']].rename(columns={'cbeats': 'prev_row_cbeats'})\n",
-    "# msg_df_2['tmp_idx'] = msg_df_2.index + 1\n",
+    "outpath = \"/Users/sorensabet/Desktop/Master's Coursework/CSC2506_Project/Splitting MIDI Files/\"\n",
+    "if os.path.exists(outpath):\n",
+    "    shutil.rmtree(outpath)\n",
+    "os.mkdir(outpath)\n",
     "\n",
-    "# msg_df = msg_df.merge(msg_df_2, on=['tmp_idx'], how='left')\n",
-    "# msg_df.fillna({'prev_row_cbeats': 0}, inplace=True)\n",
-    "# msg_df['beat_delta'] = msg_df['cbeats'] - msg_df['prev_row_cbeats']\n",
-    "# msg_df['time'] = (msg_df['beat_delta']*song_df['ticks_per_beat'].iloc[0])\n",
-    "# msg_df = msg_df.round({'time': 0})\n",
-    "# msg_df['time'] = msg_df['time'].astype(int)\n",
-    "# msg_df['track_num'] = 1\n",
+    "for song in tqdm(song_df.itertuples()):\n",
+    "    song_tpb = song[9] # Ticks per beat \n",
+    "    \n",
+    "    t_df = track_df.loc[track_df['song_idx'] == song[0]]\n",
+    "    m_df = msg_df.loc[(msg_df['song_idx'] == song[0]) & (msg_df['track_num'].isin(t_df['track_num']))]\n",
+    "    \n",
+    "    new_m_dfs = [] \n",
+    "    for t in t_df['track_num']:\n",
+    "        temp_msgs = m_df.loc[m_df['track_num'] == t]\n",
+    "        temp_msgs['ctime'] = temp_msgs['time'].cumsum()\n",
+    "        temp_msgs['cbeats'] = temp_msgs['ctime']/song_tpb\n",
+    "        new_m_dfs.append(temp_msgs)\n",
+    "    \n",
+    "    if (len(new_m_dfs) == 0):\n",
+    "        continue\n",
+    "    \n",
+    "    m_df = pd.concat(new_m_dfs)\n",
+    "    m_df['bar'] = (m_df['cbeats']/4).astype(int)  \n",
     "\n",
-    "# msg_df"
+    "    # Step 1. Copy original song over to the new folder \n",
+    "    # Step 2. Write all split files into the new folder \n",
+    "    \n",
+    "    orig_path = song[1]\n",
+    "    song_folder = outpath + str(song[0]) + '/'\n",
+    "    os.mkdir(song_folder)\n",
+    "    \n",
+    "    shutil.copy('Raw Data/' + orig_path, song_folder + '0_original.midi')\n",
+    "\n",
+    "    split_tracks(t_df, m_df, n_meas=n_meas, n_copies=n_copies, n_transpose=n_transpose, merge_tracks=merge_tracks, song_tpb=song_tpb, song_idx=song[0], folder=song_folder)\n",
+    "    \n",
+    "    #print('Finished song: %d' % (song[0]))\n",
+    "    \n",
+    "    # Make a folder for the new song based on song_idx \n",
+    "    # Paste the original as well as the subsections to the new folder "
    ]
   }
  ],
